squid-loadbalancer.yaml
# Squid LoadBalancer Service - Provides external access via MetalLB
# This service distributes external traffic across all Squid instances
apiVersion: v1
kind: Service
metadata:
  name: squid-loadbalancer
  namespace: proxy
  annotations:
    # Rancher management annotations
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["172.26.92.11"],"port":3128,"protocol":"TCP","serviceName":"proxy:squid-loadbalancer","allNodes":false}]
    field.cattle.io/targetWorkloadIds: '["proxy/squid"]'
    management.cattle.io/ui-managed: 'true'
    # MetalLB annotations
    metallb.io/ip-allocated-from-pool: squid-pool
    metallb.universe.tf/allow-shared-ip: proxy
spec:
  type: LoadBalancer
  loadBalancerIP: 172.26.92.11
  ports:
    - name: http-proxy
      port: 3128
      protocol: TCP
      targetPort: 3128
  selector:
    app: squid
  sessionAffinity: None
  externalTrafficPolicy: Local
  internalTrafficPolicy: Local
